gcc/testsuite/rust/rustc/ui/parser/shebang/shebang-must-start-file.rs
// something on the first line for tidy
#!/bin/bash  // { dg-error "" "" { target *-*-* } }

fn main() {
    println!("ok!");
}

